--- a/scripts/private_config.json
+++ b/scripts/private_config.json
@@ -1,15 +1,14 @@
 {
 	"HOMEWIZARD":
 	{
-		"LOCAL_SERIAL_PORT": "/dev/ttyUSB0",
+		"SERIAL_PORT": "/dev/ttyUSB0",
 		"CLOUD_POLLING_INTERVAL": 0,
-		"CLOUD_DEVICE_CODES_PRINT": 0,
 		"CLOUD_AUTH":
 		{
 			"USERNAME": "_username_",
 			"PASSWORD": "_password_"
 		},
-		"BACKUP_DEVICE_CODES":
+		"DEVICE_CODES":
 		{
 			"AABBCCDD": {
 				"name": "TEMP_OUTSIDE",
